--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile project(':volley')
+    compile 'com.android.support:palette-v7:22.2.1'
 }
