--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
-        android:name="com.kyletung.doubanbookmovie.MyApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -23,6 +23,23 @@
         <activity
             android:name=".GetAuthorizationCodeActivity"
             android:label="@string/title_activity_get_authorization_code" >
+        </activity>
+        <activity
+            android:name=".AboutActivity"
+            android:label="@string/title_activity_about"
+            android:theme="@style/OtherActivity" >
+        </activity>
+        <activity
+            android:name=".moviedetail.MovieDetailActivity"
+            android:label="@string/title_activity_movie_detail"
+            android:theme="@style/OtherActivity" >
+            <intent-filter>
+                <category android:name="com.kyletung.doubanbookmovie.MovieDetail" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".bookdetail.BookDetailActivity"
+            android:label="@string/title_activity_book_detail" >
         </activity>
     </application>
 
