--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kyletung.doubanbookmovie">
 
@@ -12,8 +11,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <meta-data android:value="YOUR APP KEY" android:name="56010555e0f55a2bcd00097e"/>
-        <meta-data android:value="Channel ID" android:name="All_Channel"/>
+        <meta-data android:value="56010555e0f55a2bcd00097e" android:name="UMENG_APPKEY"/>
+        <meta-data android:value="All_ChannelUMENG_CHANNEL" android:name="UMENG_CHANNEL"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
