添加个人页面

--- a/main/src/main/AndroidManifest.xml
+++ b/main/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.StartActivity"/>
         <activity android:name=".ui.LoginActivity"/>
 
     </application>
