--- a/main/build.gradle
+++ b/main/build.gradle
@@ -32,5 +32,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    // Volley
     compile project(':volley')
+    // EventBus
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
