--- a/main/build.gradle
+++ b/main/build.gradle
@@ -13,7 +13,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -21,13 +21,11 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
+//    testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:24.0.0'
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:recyclerview-v7:24.0.0'
-    // OkHttp
-    compile 'com.squareup.okhttp3:okhttp:3.3.1'
     // GSon
     compile 'com.google.code.gson:gson:2.7'
     // Glide
@@ -36,6 +34,6 @@ dependencies {
     compile project(':volley')
     // EventBus
     compile 'org.greenrobot:eventbus:3.0.0'
-    // Buttom Bar
+    // Bottom Bar
     compile 'com.aurelhubert:ahbottomnavigation:1.3.3'
 }
