--- a/main/src/main/AndroidManifest.xml
+++ b/main/src/main/AndroidManifest.xml
@@ -6,15 +6,15 @@
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/launcher_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <activity
-            android:theme="@style/StartTheme"
             android:name=".ui.StartActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/StartTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -35,6 +35,9 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.settings.SettingsActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.search.SearchActivity"
             android:screenOrientation="portrait"/>
 
     </application>
