--- a/main/build.gradle
+++ b/main/build.gradle
@@ -8,12 +8,12 @@ android {
         applicationId "com.kyletung.simplebookmovie"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
