--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     // Bottom Bar
     compile 'com.aurelhubert:ahbottomnavigation:1.3.3'
+    // Blur
+    compile 'net.qiujuer.genius:blur:2.0.0'
 }
