--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,16 @@
             android:name=".ui.StartActivity"
             android:screenOrientation="portrait"
             android:theme="@style/StartTheme">
+            <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN"/>-->
+            <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+            <!--</intent-filter>-->
+        </activity>
+
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/LoginTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -23,9 +33,6 @@
 
         <activity
             android:name=".ui.main.MainActivity"
-            android:screenOrientation="portrait"/>
-        <activity
-            android:name=".ui.login.LoginActivity"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.bookdetail.BookDetailActivity"
