关于页面移到主页面选项菜单中

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
             android:name=".ui.main.MainActivity"
             android:screenOrientation="portrait"/>
         <activity
+            android:name=".ui.about.AboutActivity"
+            android:screenOrientation="portrait"/>
+        <activity
             android:name=".ui.bookdetail.BookDetailActivity"
             android:screenOrientation="portrait"/>
         <activity
