--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
-    // Volley
-    compile project(':volley')
     // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
     // EventBus
@@ -41,5 +39,6 @@ dependencies {
     // ButterKnife
     compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
-    compile project(path: ':library')
+    // Library
+    compile project(':library')
 }
