--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
 
@@ -13,6 +14,9 @@ buildscript {
 
         // ButterKnife
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+
+        // RetroLambda
+        classpath 'me.tatarka:gradle-retrolambda:3.3.1'
 
     }
 }
