--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     compile 'com.aurelhubert:ahbottomnavigation:1.3.3'
     // Blur
     compile 'net.qiujuer.genius:blur:2.0.0'
+    // Bottom Bar
+    compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
 }
