--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,12 +47,9 @@ dependencies {
     compile rootProject.ext.dependencies.appcompatV7
     compile rootProject.ext.dependencies.recyclerview
     // Library
-    compile project(':library')
+    compile project(':commonlib')
     // ButterKnife
-    compile 'com.jakewharton:butterknife:8.2.1'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
-    // Bottom Bar
-    compile 'com.aurelhubert:ahbottomnavigation:1.3.3'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
     // Blur
     compile 'net.qiujuer.genius:blur:2.0.0'
     // Bottom Bar
