--- a/commonlib/build.gradle
+++ b/commonlib/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     // RxAndroid
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    // RxBinding
+    compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
     // EventBus
     compile 'org.greenrobot:eventbus:3.0.0'
 }
