--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,18 +17,37 @@ android {
         versionName rootProject.ext.android.versionName
     }
 
+    signingConfigs {
+        release {
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
+    }
+
     buildTypes {
         release {
             buildConfigField("String", "BASE_URL", "\"https://api.douban.com/v2/\"")
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
         debug {
             buildConfigField("String", "BASE_URL", "\"https://api.douban.com/v2/\"")
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    productFlavors {
+        global {
+            applicationId "com.kyletung.simplebookmovie"
+        }
+        china {
+            applicationId "com.kyletung.doubanbookmovie"
         }
     }
 
