--- a/commonlib/build.gradle
+++ b/commonlib/build.gradle
@@ -31,6 +31,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile rootProject.ext.dependencies.design
     compile rootProject.ext.dependencies.appcompatV7
     compile rootProject.ext.dependencies.recyclerview
     testCompile 'junit:junit:4.12'
@@ -46,10 +47,10 @@ dependencies {
     // ButterKnife
     compile 'com.jakewharton:butterknife:8.4.0'
     // AutoValue
-    compile 'com.google.auto.value:auto-value:1.2'
-    apt 'com.google.auto.value:auto-value:1.2'
+//    compile 'com.google.auto.value:auto-value:1.2'
+//    apt 'com.google.auto.value:auto-value:1.2'
     // reactive database wrapper
-    compile 'com.squareup.sqlbrite:sqlbrite:0.8.0'
+//    compile 'com.squareup.sqlbrite:sqlbrite:0.8.0'
     // RxAndroid
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
