--- a/commonlib/build.gradle
+++ b/commonlib/build.gradle
@@ -34,11 +34,9 @@ dependencies {
     compile rootProject.ext.dependencies.design
     compile rootProject.ext.dependencies.appcompatV7
     compile rootProject.ext.dependencies.recyclerview
-    testCompile 'junit:junit:4.12'
     // third-party libraries about network
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     // about json translate
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
@@ -46,11 +44,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     // ButterKnife
     compile 'com.jakewharton:butterknife:8.4.0'
-    // AutoValue
-//    compile 'com.google.auto.value:auto-value:1.2'
-//    apt 'com.google.auto.value:auto-value:1.2'
-    // reactive database wrapper
-//    compile 'com.squareup.sqlbrite:sqlbrite:0.8.0'
     // RxAndroid
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
@@ -58,4 +51,6 @@ dependencies {
     compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
     // EventBus
     compile 'org.greenrobot:eventbus:3.0.0'
+    // Lottie
+    compile 'com.airbnb.android:lottie:1.5.3'
 }
