--- a/config.gradle
+++ b/config.gradle
@@ -1,5 +1,7 @@
 ext {
 
+    def supportVersion = "25.3.0"
+
     android = [
             compileSdkVersion: 25,
             buildToolsVersion: "25.0.2",
@@ -10,10 +12,10 @@ ext {
     ]
 
     dependencies = [
-            appcompatV7 : 'com.android.support:appcompat-v7:25.2.0',
-            recyclerview: 'com.android.support:recyclerview-v7:25.2.0',
-            cardview    : 'com.android.support:cardview-v7:25.2.0',
-            design      : 'com.android.support:design:25.2.0'
+            appcompatV7 : "com.android.support:appcompat-v7:${supportVersion}",
+            recyclerview: "com.android.support:recyclerview-v7:${supportVersion}",
+            cardview    : "com.android.support:cardview-v7:${supportVersion}",
+            design      : "com.android.support:design:${supportVersion}"
     ]
 
 }
