--- a/config.gradle
+++ b/config.gradle
@@ -1,14 +1,14 @@
 ext {
 
-    def supportVersion = "25.3.0"
+    def supportVersion = '25.3.0'
 
     android = [
             compileSdkVersion: 25,
-            buildToolsVersion: "25.0.2",
+            buildToolsVersion: '25.0.2',
             minSdkVersion    : 16,
             targetSdkVersion : 25,
             versionCode      : 7,
-            versionName      : "1.6"
+            versionName      : '1.6'
     ]
 
     dependencies = [
